k3s_cluster/base/private/dozzle/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute
  namespace: private
  labels:
    app: private-dozzle
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`dozzle.private.home`)
      middlewares:
        - name: private-middleware-auth-authentik
      services:
        - name: private-dozzle-service
          port: 4415
  #tls: {}
